--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,54 +1,31 @@
+
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/mystyles.css">
-    <title>Assignment Solution for Module 2</title>
+<meta charset="utf-8">
+<title>Assignment Solution for Module 2</title>
+<link rel="stylesheet" href="css/style.css">
 </head>
-
-<body>
-    <div class="heading">
-        <p>Our Menu</p>
+<body >
+<h1>Our Menu</h1>
+  <section class="column-lg-4 colmn-md-6 colmn-sm-12">
+    <div>
+      <p class="t1">Chicken</p>
+      <p class="description">
+       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+      </p>
     </div>
-
-    <div id="block" class="col-lg-4 col-md-6 col-sm-12">
-        <div class="box">
-            <div class="section-title bg1">
-                <p>Pizza Hut</p>
-            </div>
-            <div>
-                <p>
-                    Pizza Hut is an American restaurant chain and international franchise which was founded in 1958 in Wichita, Kansas by Dan and Frank Carney. The company is known for its Italian American cuisine menu, including pizza and pasta, as well as side dishes and desserts.
-                </p>
-            </div>
-        </div>
+  </section>
+  <section class="column-lg-4 colmn-md-6 colmn-sm-12">
+    <div>
+      <p class="t2">Beef</p>
+      <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
     </div>
-    <div id="block" class="col-lg-4 col-md-6 col-sm-12">
-        <div class="box">
-            <div class="section-title bg2">
-                <p>Domino's</p>
-            </div>
-            <div>
-                <p>
-                    Domino's Pizza, Inc., branded as Domino's, is an American multinational pizza restaurant chain founded in 1960. The corporation is headquartered at the Domino's Farms Office Park in Ann Arbor, Michigan, and incorporated in Delaware. In February 2018, the chain had sold more products out of all pizza sellers worldwide.
-                </p>
-            </div>
-        </div>
-    </div>
-    <div id="block" class="col-lg-4 col-md-12 col-sm-12">
-        <div class="box">
-            <div class="section-title bg3">
-                <p>McDonald's</p>
-            </div>
-            <div>
-                <p>
-                    McDonald's Corporation is an American fast food company, founded in 1940 as a restaurant operated by Richard and Maurice McDonald, in San Bernardino, California, United States. 
-                </p>
-            </div>
-        </div>
-    </div>
+  </section>
+  <section class="column-lg-4 colmn-md-12 colmn-sm-12">
+  <div>
+    <p class="t3">Sushi</p>
+      <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+  </div>
 </body>
-
 </html>
